fix: resolution on mobile is now better

--- a/css/agency.css
+++ b/css/agency.css
@@ -179,6 +179,13 @@ header.masthead {
   background-size: cover;
 }
 
+@media (max-width: 768px) {
+    header.masthead {
+        background-image: url("../img/header-bg.jpg");
+        background-position: center bottom;
+    }
+}
+
 header.masthead .intro-text {
   padding-top: 8950px;
   padding-bottom: 100px;
